force-app/main/default/objects/Coupon__c/Coupon__c.object-meta.xml
<CustomObject>
    <label>Coupon</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>