force-app/main/default/objects/Coupon__c/fields/Coupon_Used__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Used__c</fullName>
    <label>Coupon Used</label>
    <summaryForeignKey>Cart__c.Coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>