force-app/main/default/objects/Coupon__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>NOW() &gt; Expired_In_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired?</label>
    <type>Checkbox</type>
</CustomField>