force-app/main/default/objects/Coupon__c/fields/Expired_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Expired_In_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expired In(Time)</label>
    <type>DateTime</type>
</CustomField>