force-app/main/default/objects/Coupon__c/fields/Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Quantity__c</fullName>
    <formula>Total_Quantity__c -  Coupon_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>