force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Remaining_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>